--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -79,13 +79,13 @@ article  {
     position: absolute;
     opacity: 0.8;
     width: 100%;
-    top: 250px;
+    top: 350px;
     
 }
 article img {
     display: block;
     float: right;
-    height: 200px;
+    height: auto;
 }
 
 .hero img {
