--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -98,7 +98,7 @@ article img {
 main {
     display: block;
     width: 100%;
-    text-align: center;
+    text-align: left;
     position: relative;
 }
 
